Changed colors and new header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <header>
+        <h1>Cars cards!</h1>
+    </header>
     <main class="grid-container">
         <article class="cards first">
             <h1>Brand</h1>
